112. Se crea un Landscapes

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,8 +59,8 @@ ClientWindowHeight=480
 ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-KHEA3GT
 LastExecutedLaunchName=DESKTOP-KHEA3GT
 LastExecutedPIEPreviewDevice=
@@ -70,7 +70,13 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [MRU]
 MRUItem0=/Game/BattleGround
 
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
 [LandscapeEdit]
+ToolStrength=0.461905
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -440,8 +446,24 @@ AtmosphericFog.Tags=True
 AtmosphericFog.Cooking=True
 AtmosphericFog.Replication=True
 AtmosphericFog.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
+RecentlyPlaced=/Script/Landscape.Landscape;/Engine/Transient.ActorFactoryLandscape_0
+
+[MessageLog]
+LastLogListing=LightingResults
+
+[DetailPropertyExpansion]
+LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 
