114. Se agrega un material para pintar el Landscape

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -450,9 +450,30 @@ LightmassImportanceVolume.TransformCommon=True
 LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.BrushSettings=True
 LightmassImportanceVolume.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=False
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
+PreviewMaterial.Usage=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
@@ -465,5 +486,11 @@ LastLogListing=LightingResults
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" "
+MaterialExpression=
+Object=
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Landscape
 
 
