116. Se hace de Flat Shading opcional

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,9 +80,9 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [LandscapeEdit]
-ToolStrength=0.476190
-BrushRadius=837.638611
-BrushFalloff=0.523810
+ToolStrength=0.238095
+BrushRadius=902.725830
+BrushFalloff=0.885714
 ErodeThresh=55
 ErosionNoiseMode=1
 ErosionNoiseScale=103.697151
@@ -181,6 +181,7 @@ BattleTank.LastCompileMethod=Unknown
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Landscape.Landscape
 OpenAssetsAtExit=/Game/FlatLand.FlatLand
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -486,6 +487,15 @@ MaterialExpressionWorldPosition.MaterialExpression=True
 MaterialExpressionDDX.MaterialExpression=True
 MaterialExpressionDDY.MaterialExpression=True
 MaterialExpressionCrossProduct.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpressionLandscapeLayerCoords=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+LandscapeEditorObject.Change Component Size=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -502,13 +512,14 @@ LastLogListing=LightingResults
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" "
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
 Object=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FlatLand
-MRUItem1=/Game/Landscape
+MRUItem0=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem1=/Game/FlatLand
+MRUItem2=/Game/Landscape
 
 [AssetEditorToolkitTabLocation]
 /Game/FlatLand.FlatLand=0
