--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -851,8 +851,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Tank/tank_fbx_Body.tank_fbx_Body
-OpenAssetsAtExit=/Game/Tank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -890,7 +889,7 @@ GeneralProjectSettings.Displayed=True
 GeneralProjectSettings.Settings=True
 GameplayTagsSettings.GameplayTags=True
 GameplayTagsSettings.Advanced Replication=True
-GameMapsSettings.DefaultModes=False
+GameMapsSettings.DefaultModes=True
 GameMapsSettings.DefaultMaps=True
 GameMapsSettings.LocalMultiplayer=True
 GameMapsSettings.GameInstance=True
@@ -1249,6 +1248,35 @@ PlayerStart.Rendering=True
 PlayerStart.Replication=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+MyBattleTankGameModeBase_BP_C.Tick=True
+MyBattleTankGameModeBase_BP_C.Classes=True
+MyBattleTankGameModeBase_BP_C.Game=True
+MyBattleTankGameModeBase_BP_C.GameMode=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.StaticMesh=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -1257,7 +1285,7 @@ FbxImportUI.Mesh=True
 StaticMeshSocket.StaticMeshSocket=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Tank/Tank_BP.Tank_BP;
+RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 RecentlyPlaced=/Script/Landscape.Landscape;/Engine/Transient.ActorFactoryLandscape_0
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
@@ -1273,19 +1301,24 @@ MaterialExpression=
 Object=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tank/tank_fbx_Body
-MRUItem1=/Game/Tank/Tank_BP
-MRUItem2=/Game/Tank/tank_fbx_Turret
-MRUItem3=/Game/Tank/tank_fbx_Track
-MRUItem4=/Game/Tank/tank_fbx_Barrel
-MRUItem5=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem6=/Game/FlatLand
-MRUItem7=/Game/Landscape
+MRUItem0=/Game/MyBattleTankGameModeBase_BP
+MRUItem1=/Game/ImprovedTank/new_tank_fbx_Body
+MRUItem2=/Game/ImprovedTank/tank_fbx_Body
+MRUItem3=/Game/Tank/tank_fbx_Body
+MRUItem4=/Game/Tank/Tank_BP
+MRUItem5=/Game/Tank/tank_fbx_Turret
+MRUItem6=/Game/Tank/tank_fbx_Track
+MRUItem7=/Game/Tank/tank_fbx_Barrel
+MRUItem8=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem9=/Game/FlatLand
+MRUItem10=/Game/Landscape
 
 [AssetEditorToolkitTabLocation]
 /Game/FlatLand.FlatLand=0
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=1
 /Game/Landscape.Landscape=1
+/Game/Tank/tank_fbx_Body.tank_fbx_Body=0
+/Game/ImprovedTank/new_tank_fbx_Body.new_tank_fbx_Body=0
 
 [MaterialEditor]
 PrimType=1
