121. Se agrega Camara en 3ra persona - Se agregan los controles para mover la camara.

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,70 +105,70 @@ ShowUnusedLayers=True
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AssetToolsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ChaosSolverSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-DebugCameraControllerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LandscapeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NavigationSystemV1=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-SkeletalMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-StructViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TextureImportSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LuminRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MagicLeapSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MagicLeapSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AssetToolsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ChaosSolverSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+DebugCameraControllerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+LandscapeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+NavigationSystemV1=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+SkeletalMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+StructViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+TextureImportSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+LuminRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+MagicLeapSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+MagicLeapSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.AimAzimuth,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.AimElevation,
 
 [EditorStartup]
 LastLevel=/Game/BattleGround
@@ -1277,6 +1277,13 @@ SpringArmComponent.ComponentReplication=True
 SpringArmComponent.Activation=True
 SpringArmComponent.Cooking=True
 SpringArmComponent.Events=True
+EdGraph.Graph=True
+K2Node_GetInputAxisValue.Input=True
+K2Node_InputAxisEvent.Input=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -1299,6 +1306,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
 Object=
+InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyBattleTankGameModeBase_BP
@@ -1319,6 +1327,7 @@ MRUItem10=/Game/Landscape
 /Game/Landscape.Landscape=1
 /Game/Tank/tank_fbx_Body.tank_fbx_Body=0
 /Game/ImprovedTank/new_tank_fbx_Body.new_tank_fbx_Body=0
+/Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP=0
 
 [MaterialEditor]
 PrimType=1
@@ -1533,5 +1542,8 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
 
