123. Se agrega un componente escena para mover la camara horizontalmente en ella, y verticalmente usuando el spring Arm, para evitar comportamiento extraño. - Se agrega User Interface para agregar el punto de mira.

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -851,7 +851,10 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
+OpenAssetsAtExit=/Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP
+OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1284,6 +1287,42 @@ K2Node_VariableGet.Variable=True
 K2Node_VariableGet.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_VariableGet.DefaultValueCategory=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+TankPlayerController_BP_C.PlayerController=True
+TankPlayerController_BP_C.Tick=True
+TankPlayerController_BP_C.Cheat Manager=True
+TankPlayerController_BP_C.MouseInterface=True
+TankPlayerController_BP_C.Game=True
+TankPlayerController_BP_C.Controller=True
+TankPlayerController_BP_C.Replication=True
+TankPlayerController_BP_C.Input=True
+TankPlayerController_BP_C.Actor=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -1310,16 +1349,18 @@ InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyBattleTankGameModeBase_BP
-MRUItem1=/Game/ImprovedTank/new_tank_fbx_Body
-MRUItem2=/Game/ImprovedTank/tank_fbx_Body
-MRUItem3=/Game/Tank/tank_fbx_Body
-MRUItem4=/Game/Tank/Tank_BP
-MRUItem5=/Game/Tank/tank_fbx_Turret
-MRUItem6=/Game/Tank/tank_fbx_Track
-MRUItem7=/Game/Tank/tank_fbx_Barrel
-MRUItem8=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem9=/Game/FlatLand
-MRUItem10=/Game/Landscape
+MRUItem1=/Game/TankPlayerController_BP
+MRUItem2=/Game/PlayerUI
+MRUItem3=/Game/ImprovedTank/new_tank_fbx_Body
+MRUItem4=/Game/ImprovedTank/tank_fbx_Body
+MRUItem5=/Game/Tank/tank_fbx_Body
+MRUItem6=/Game/Tank/Tank_BP
+MRUItem7=/Game/Tank/tank_fbx_Turret
+MRUItem8=/Game/Tank/tank_fbx_Track
+MRUItem9=/Game/Tank/tank_fbx_Barrel
+MRUItem10=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem11=/Game/FlatLand
+MRUItem12=/Game/Landscape
 
 [AssetEditorToolkitTabLocation]
 /Game/FlatLand.FlatLand=0
@@ -1545,5 +1586,61 @@ bConvertSceneUnit=False
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[UMGEditor.Designer]
+PreviewWidth=1440
+PreviewHeight=900
+PreviewAspectRatio=16:10
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
 
