124. Se crea un nuevo nivel para mostrar el menu principal, se agrega un fondo de pantalla y botones

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,7 +68,8 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
-MRUItem0=/Game/BattleGround
+MRUItem0=/Game/MainMenu
+MRUItem1=/Game/BattleGround
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -851,10 +852,9 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MainMenuUI.MainMenuUI
 OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
-OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP
-OpenAssetsAtExit=/Game/TankPlayerController_BP.TankPlayerController_BP
+OpenAssetsAtExit=/Game/MainMenu.MainMenu:PersistentLevel.MainMenu
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1323,6 +1323,43 @@ TankPlayerController_BP_C.Controller=True
 TankPlayerController_BP_C.Replication=True
 TankPlayerController_BP_C.Input=True
 TankPlayerController_BP_C.Actor=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Input=True
+MainMenu_C.Actor=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+MainMenuUI_C.Appearance=True
+MainMenuUI_C.Input=True
+MainMenuUI_C.Accessibility=True
+MainMenuUI_C.Interaction=True
+MainMenuUI_C.Behavior=True
+MainMenuUI_C.Render Transform=True
+MainMenuUI_C.Performance=True
+MainMenuUI_C.Clipping=True
+MainMenuUI_C.Navigation=True
+MainMenuUI_C.Localization=True
+MyBattleTankGameModeBase_BP_C.LOD=False
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -1344,23 +1381,27 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
-Object=
+Object="\"Object.Appearance.Brush\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
+Image="\"Object.Appearance.Brush\" "
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyBattleTankGameModeBase_BP
 MRUItem1=/Game/TankPlayerController_BP
 MRUItem2=/Game/PlayerUI
-MRUItem3=/Game/ImprovedTank/new_tank_fbx_Body
-MRUItem4=/Game/ImprovedTank/tank_fbx_Body
-MRUItem5=/Game/Tank/tank_fbx_Body
-MRUItem6=/Game/Tank/Tank_BP
-MRUItem7=/Game/Tank/tank_fbx_Turret
-MRUItem8=/Game/Tank/tank_fbx_Track
-MRUItem9=/Game/Tank/tank_fbx_Barrel
-MRUItem10=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem11=/Game/FlatLand
-MRUItem12=/Game/Landscape
+MRUItem3=/Game/MainMenuUI
+MRUItem4=/Game/ImprovedTank/new_tank_fbx_Body
+MRUItem5=/Game/ImprovedTank/tank_fbx_Body
+MRUItem6=/Game/Tank/tank_fbx_Body
+MRUItem7=/Game/Tank/Tank_BP
+MRUItem8=/Game/Tank/tank_fbx_Turret
+MRUItem9=/Game/Tank/tank_fbx_Track
+MRUItem10=/Game/Tank/tank_fbx_Barrel
+MRUItem11=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem12=/Game/FlatLand
+MRUItem13=/Game/Landscape
 
 [AssetEditorToolkitTabLocation]
 /Game/FlatLand.FlatLand=0
@@ -1369,6 +1410,9 @@ MRUItem12=/Game/Landscape
 /Game/Tank/tank_fbx_Body.tank_fbx_Body=0
 /Game/ImprovedTank/new_tank_fbx_Body.new_tank_fbx_Body=0
 /Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP=0
+/Game/ImprovedTank/Tank_BP.Tank_BP=0
+/Game/PlayerUI.PlayerUI=0
+/Game/TankPlayerController_BP.TankPlayerController_BP=0
 
 [MaterialEditor]
 PrimType=1
@@ -1496,6 +1540,18 @@ MeshImportExport=D:/Proyectos UE4/BattleTank/BattleTank/Content/
 WorldRoot=D:/Proyectos UE4/BattleTank/BattleTank/Content/
 Level=D:/Proyectos UE4/BattleTank/BattleTank/Content/
 Project=C:/Program Files/Epic Games/UE_4.23/
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+User Created=False
+Advanced=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
