125. La imagen del BG se adapta al tamaño de pantalla - Se importa un Font, para el titulo y el texto de los botones

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ BattleTank/Content/StarterContent/
 *.sln
 BattleTank/Content/Chris-Folea-MountainRange3.png
 BattleTank/Content/Chris-Folea-MountainRange3.uasset
+BattleTank/Content/BT17-Firing-M1A1-tank-in-Djibouti.uasset
