128. Se enpaqueta (Build) el juego, se solucion aproblema donde al pasar del menu principal al juego, persistia la configuracion de "UI Only"

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -868,6 +868,7 @@ NewLevelDialog.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/MainMenuUI.MainMenuUI
+OpenAssetsAtExit=/Game/MainMenu.MainMenu:PersistentLevel.MainMenu
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1439,7 +1440,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" "
 MaterialExpression=
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+Object=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Console.ConsoleKeys\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
@@ -1471,9 +1472,9 @@ PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Backgroun
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MainMenu
-MRUItem1=/Game/BattleGround
-MRUItem2=/Game/MainMenuUI
-MRUItem3=/Game/MyBattleTankGameModeBase_BP
+MRUItem1=/Game/MyBattleTankGameModeBase_BP
+MRUItem2=/Game/BattleGround
+MRUItem3=/Game/MainMenuUI
 MRUItem4=/Game/TankPlayerController_BP
 MRUItem5=/Game/PlayerUI
 MRUItem6=/Game/ImprovedTank/new_tank_fbx_Body
@@ -1499,6 +1500,7 @@ MRUItem15=/Game/Landscape
 /Game/TankPlayerController_BP.TankPlayerController_BP=0
 /Game/MainMenuUI.MainMenuUI=0
 /Game/MainMenu.MainMenu:PersistentLevel.MainMenu=0
+/Game/BattleGround.BattleGround:PersistentLevel.BattleGround=1
 
 [MaterialEditor]
 PrimType=1
